vendor addition has been implemented with role and permissions have been given